--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+*{
+    font-family: Arial;
+}
+body{
+    margin: 0;
+}
+header{
+    background-color: lightgray;
+    width: 100vw;
+    padding: 2em 0;
+}
+
 button{
     cursor: pointer;
 }
@@ -9,20 +21,19 @@ button{
     margin: 2em;
 }
 
-.product-wrapper div,
-.product-wrapper div, img{
+.product-wrapper div{
     margin: 1em;
 }
-
 
 .nav-wrapper{
     display: flex;
     justify-content: flex-end;
+    padding-right: 1em;
 }
 
 .fa-shopping-cart{
     font-size: 1.5em;
-    padding:0 1em;
+    padding:0 0.5em;
 }
 
 
@@ -30,8 +41,9 @@ h1, h2, p{
     text-align: center;
 }
 
-.product-wrapper div h2{
+.product h2{
     display: inline-block;
+    padding-left: 1em;
 }
 
 .product-wrapper div img{
@@ -42,7 +54,9 @@ h1, h2, p{
 
 .product{
     border: 1px solid black;
-    padding: 1em;
+}
+.product button{
+    margin: 1em;
 }
 
 /* ------ IMG width for desktop-view ------*/
@@ -101,13 +115,54 @@ textarea{
 
 /*--------Styling form desktop-view ----*/
 @media (min-width: 30em) {
+    .checkout-wrapper{
+        margin-top: 3em;
+    }
     .col-50{
         width: 49.5%;
         display: inline-block;
-        
     }
     .button-wrap{
         width: 50%;
         margin: 0 auto;
     }
+}
+
+
+/*--------Styling shopping cart mobile-view ----*/
+.checkout-row{
+    padding: 0.5em;
+    border-bottom: 2px solid black;
+    background-color: steelblue;
+    color: whitesmoke;
+    width: 100vw;
+}
+
+.checkout-row p{
+    padding: 0 1em;
+}
+.checkout-row p:first-child{
+    width: 200px;
+    text-align: left;
+}
+
+/*--------Styling shopping cart desktop-view ----*/
+@media (min-width: 30em) {
+    .checkout-row p{
+        display: inline-block;
+    }
+}
+
+
+/*--------Styling footer ----*/
+footer{
+    margin-top: 2em;
+    height: 200px;
+    background-color: lightgray;
+    display: flex;
+    justify-content: center;
+}
+footer p{
+    text-align: center;
+    align-self: flex-end;
 }
