--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Document</title>
         <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
@@ -26,9 +27,15 @@
 
     </section>
 
+<!-- -----------Product information page ----- -->
+    <section class="product-info">
+
+
+    </section>
+
     <!-- ----------Checkout Page------------- -->
 
-    <!-- ----------Checkout Shopping Cart---- -->
+
 
         <!-- Render the checkout cart into this div-->
     <section class="checkout-wrapper">
@@ -120,7 +127,10 @@
     <p>webshop@gmail.com</p>
 </footer>
 
-
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src="../scripts/index.js"> </script>
     </body>
 </html>
