--- a/views/index.html
+++ b/views/index.html
@@ -77,7 +77,7 @@
 
             <div>
                 <div class="input-block">
-                    <input type="text" class="form-control" placeholder=" Phone number">
+                    <input type="text" name="phoneNr" class="form-control" placeholder=" Phone number">
                 </div>
             </div>
 
@@ -110,7 +110,7 @@
 
             <div>
                 <div class="input-block">
-                    <textarea rows="3" class="form-control" placeholder=" Write a message if you want..."></textarea>
+                    <textarea rows="3" name="comment" class="form-control" placeholder=" Write a message if you want..."></textarea>
                 </div>
             </div>
             <p id="optional">* = field is required</p>
